--- a/resources/lang/en/Config.properties
+++ b/resources/lang/en/Config.properties
@@ -67,4 +67,5 @@ allowedCountryLabel = Allowed Countries
 onholdCapture = Capture
 onholdAuthorize = Authorize
 paymentActionLabel = Payment Action
-
+minimumOrderAmountLabel = Minimum order Amount
+maximumOrderAmountLabel = Maximum order Amount
