--- a/resources/lang/de/Config.properties
+++ b/resources/lang/de/Config.properties
@@ -66,4 +66,5 @@ allowedCountryLabel = Zulässiges Land
 onholdCapture = Zahlung einziehen
 onholdAuthorize = Zahlung autorisieren
 paymentActionLabel = Zahlungsvorgang
-
+minimumOrderAmountLabel = Mindestbestellmenge
+maximumOrderAmountLabel = Maximum order Amount
