--- a/resources/lang/de/Config.properties
+++ b/resources/lang/de/Config.properties
@@ -63,8 +63,10 @@ gatewaytimeoutTooltip=Falls die Verarbeitungszeit der Bestellung das Zeitlimit d
 proxyserverTooltip=Geben Sie den Proxy-Server ein
 sepaDueDateTooltip=Geben Sie die Anzahl der Tage ein, nach denen die Zahlung vorgenommen werden soll (muss zwischen 2 und 14 Tagen liegen).
 allowedCountryLabel = Zulässiges Land
-onholdCapture = Zahlung einziehen
-onholdAuthorize = Zahlung autorisieren
-paymentActionLabel = Zahlungsvorgang
-minimumOrderAmountLabel = Mindestbestellmenge
-maximumOrderAmountLabel = Maximum order Amount
+onholdCapture=Zahlung einziehen
+onholdAuthorize=Zahlung autorisieren
+paymentActionLabel=Zahlungsvorgang
+minimumOrderAmountLabel=Mindest-Bestellbetrag
+maximumOrderAmountLabel=Maximal-Bestellbetrag
+minimumOrderAmountTooltip=Mindest-Bestellbetrag, um diese Zahlungsart anzubieten (in der kleinsten Währungseinheit, z.B. 100 Cent = entsprechen 1.00 EUR) 
+maximumOrderAmountLabel=Maximal-Bestellbetrag um diese Zahlungsart anzubieten (in der kleinsten Währungseinheit, z.B. 100 Cent = entsprechen 1.00 EUR)
