--- a/resources/lang/en/Config.properties
+++ b/resources/lang/en/Config.properties
@@ -63,9 +63,11 @@ paymentGuaranteeStatus=Order status for the pending payment
 gatewaytimeoutTooltip=If the processing time of the order exceeds the time limit of the interface, the order will not be executed
 proxyserverTooltip=Enter the proxy server
 sepaDueDateTooltip=Enter the number of days after which the payment should be processed (must be between 2 and 14 days) 
-allowedCountryLabel = Allowed Countries
-onholdCapture = Capture
-onholdAuthorize = Authorize
-paymentActionLabel = Payment Action
-minimumOrderAmountLabel = Minimum order Amount
-maximumOrderAmountLabel = Maximum order Amount
+allowedCountryLabel=Allowed Countries
+onholdCapture=Capture
+onholdAuthorize=Authorize
+paymentActionLabel=Payment Action
+minimumOrderAmountLabel=Minimum Order Amount
+maximumOrderAmountLabel=Maximum Order Amount
+minimumOrderAmountTooltip=Minimum Order Amount to offer this Payment (in minimum unit of currency. E.g. enter 100 which is equal to 1.00)
+maximumOrderAmountLabel=Maximum Order Amount to offer this Payment  (in minimum unit of currency. E.g. enter 100 which is equal to 1.00)
