--- a/resources/lang/en/PaymentMethod.properties
+++ b/resources/lang/en/PaymentMethod.properties
@@ -1,6 +1,6 @@
 name = "Novalnet"
 novalnet_cc = "Credit Card"
-novalnet_sofort = "Instant Bank Transfer"
+novalnet_sofort = "Online Bank Transfer"
 novalnet_paypal = "PayPal"
 novalnet_ideal = "iDEAL"
 novalnet_eps = "eps"
