--- a/resources/lang/de/PaymentMethod.properties
+++ b/resources/lang/de/PaymentMethod.properties
@@ -1,6 +1,6 @@
 name = "Novalnet"
 novalnet_cc = "Kreditkarte"
-novalnet_sofort = "Sofortüberweisung"
+novalnet_sofort = "Sofort"
 novalnet_paypal = "PayPal"
 novalnet_ideal = "iDEAL"
 novalnet_eps = "Eps"
