--- a/resources/lang/de/Config.properties
+++ b/resources/lang/de/Config.properties
@@ -21,7 +21,7 @@ sepaDueDateLabel=Abstand (in Tagen) bis zum SEPA-Einzugsdatum
 NovalnetInvoiceTab=Kauf auf Rechnung
 invoiceDueDateLabel=Fälligkeitsdatum (in Tagen)
 NovalnetPrepaymentTab=Vorauskasse
-NovalnetInstantBankTransferTab=Sofortüberweisung
+NovalnetInstantBankTransferTab=Sofort
 NovalnetPayPalTab=PayPal
 NovalnetiDealTab=iDeal
 NovalnetEPSTab=EPS
